# comparateur-chauffage

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py  calculations.py  main.py
app/static/: styles.css
app/templates/: index.html
tests/: test_calculations.py
