[project]
name = "chaudiere-webapp"
version = "0.1.0"
description = "Simple one-page web app to compare heating scenarios."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.30,<1",
    "jinja2>=3.1,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"
